# homebrew-vegitate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Formula/: vegitate.rb
docs/: CNAME  index.html
scripts/: generate_formula.py  release.sh
src/vegitate/: __init__.py  __main__.py  cli.py  config.py  core.py  display.py  keys.py
